2008-01-14 Lars Uebernickel <larsuebernickel@gmx.de>
	* *: Added support for CUPS custom options
	  (see http://www.cups.org/documentation.php/spec-ppd.html#OPTIONS)
	   o PPD files can contain both CUPS and foomatic custom options
	   o Custom options can be set like this on the command line:
	   		Options with a single parameter:
	   			-o optionname=Custom.value  or
	   		    -o optionname=value
	   		Options with multiple parameters:
	   		    -o optionname={param1=value1 param2=value2 ...}

	* options.c: Refactored the options system to allow for custom 
	  options. As a nice side effect, lots of redundant code (getting
	  commands / drivervalues for the options, syncing PageSize
	  and PageRegion) could be removed from foomaticrip.c.

2007-12-21 Lars Uebernickel <larsuebernickel@gmx.de>
	* *: Converted foomatic-rip to C and updated the build system.

2007-12-04  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-gswrapper.in: Let Ghostscript always use buffered
	  input. This works around a Ghostscript bug which prevents
	  printing encrypted PDF files with Adobe Reader 8.1.1 and
	  Ghostscript built as shared library (Ghostscript bug #689577,
	  Ubuntu bug #172264).

2007-11-30  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-rip.in: More bug fixes:
	   o If the CUPS-style duples option
	     "-o sides={one|two}-sided[-{long|short}-edge]" was supplied,
	     the "Duplex" option could be set to "0", "LongEdge", or
	     "ShortEdge", which do not exist in the "Duplex" options in
	     PPD files (Thanks to Ricoh Japan for reporting this bug). 
	   o Now all of "LongEdge", "DuplexNoTumble", or "ShortEdge", 
	     "DuplexTumble", are converted to each other if supplied as 
	     value to an enumerated choice option (usually "Duplex") and
	     this value is not in the list of choices.
	   o Removed the unused variable "$rangeend" from the
	     parsepageranges() function.
	   o Reset the best score for finding the narrowest page range