@@ -8,9 +8,9 @@ AC_CONFIG_SRCDIR([options.c])
 
 # If the user didn't specify the $sysconfdir on the command line, let it
 # be /etc, not /usr/local/etc or /usr/etc
-if [[ x$sysconfdir = 'x${prefix}/etc' ]]; then
-  sysconfdir=/etc
-fi
+# if [[ x$sysconfdir = 'x${prefix}/etc' ]]; then
+#  sysconfdir=/etc
+# fi
 
 # Checks for programs.
 AC_PROG_CC
@@ -116,8 +116,7 @@ AC_ARG_WITH(execpath,[  --with-execpath=(path to various filters)
 AC_MSG_RESULT([Execpath: $EXECPATH])
 AC_SUBST(EXECPATH)
 
-AC_CONFIG_FILES([Makefile beh foomatic-gswrapper foomatic-rip.1
-	foomatic-gswrapper.1])
+AC_CONFIG_FILES([Makefile beh foomatic-rip.1])
 AC_OUTPUT
 
 # Finished
