@@ -1,31 +1,0 @@
-.\" This -*- nroff -*- source file is part of foomatic.
-.\"
-.TH FOOMATIC-GSWRAPPER 1 "2001-05-07" "Foomatic Project"
-.SH NAME
-foomatic-gswrapper \- foomatic wrapper for ghostscript
-.SH SYNOPSIS
-.B foomatic-gswrapper
-[\fB gs option \fR] ...
-
-
-This is a little Ghostscript regularization script.  It massages
-arguments to make Ghostscript execute properly as a filter, with
-output on stdout and errors etc on stderr.
-
-.\".SH SEE ALSO
-.\".IR foomatic-XXX (1),
-
-.SH EXIT STATUS
-.B foomatic-gswrapper
-returns 0 on success.
-
-.SH AUTHOR
-Manfred Wassmann <\fImanolo@NCC-1701.B.Shuttle.de\fR> for the foomatic
-project using output from the associated binary.
-
-.SH BUGS
-None so far.
-
-Please send bug reports to the Foomatic mailing list:
-
-http://lists.freestandards.org/mailman/listinfo/printing-foomatic
